# MidiGyver

./: .travis.yaml  .travis.yml  CMakeLists.txt  Makefile  README.md  config.yaml  debian_package_description.txt
debian/: changelog  control  copyright  files  rules
examples/: Makefile  blender_frames.yaml  glslViewer.frag  glslViewer.yaml  nanoKONTROL2_secuencer.yaml  nanoKONTROL2_sequencer.yaml  nanoKontrol2.frag  nanoKontrol2.yaml  orthoRemote.frag  orthoRemote.yaml  sequencer.txt  sequencer.yaml  test_001.frag  test_003.frag
examples/blender/: op-z_blender.yaml  opz.blend  ortho_remote.blend
examples/empty/: nanoKontrol2.yaml  ortho_remote.yaml
examples/instruments/: mpk3_opz.yaml  nanoKontrol2_drum_room.yaml  nanoKontrol2_hydrogen.yaml
examples/network/: recieve.yaml  send_mpk3.yaml  split_send_mpk3.yaml
examples/sequencer/: nanoKontrol2_drum_room.yaml  nanoKontrol2_hydrogen.yaml
examples/shaders/: op-z.frag  op-z.yaml  test_000.frag  test_000.yaml  test_001.yaml  test_002.frag  test_002.yaml  test_003.yaml
examples/templates/: mpk3.yaml  nanoKontrol2.yaml  op-z.yaml  op-z_rainfall.frag  ortho_remote.yaml
src/: Broadcaster.cpp  Broadcaster.h  Color.h  Command.h  Context.cpp  Context.h  Device.h  File.h  JSContext.cpp  JSContext.h  JSValue.h  Midi.cpp  Midi.h  MidiDevice.cpp  MidiDevice.h  MidiInput.cpp  MidiInput.h  MidiLog.cpp  MidiLog.h  OscDevice.cpp  OscDevice.h  Pulse.cpp  Pulse.h  Rosetta.cpp  Rosetta.h  Term.h  Vector.h  main.cpp  tools.h
src/ops/: address.h  broadcast.h  nodes.h  osc.h  protocol.h  source.h  strings.h  target.h  times.h  udp.h  values.h
src/types/: Color.h  DataType.h  Vector.h
